misc4.0/contour/operator.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    control-plane: contour-operator
  name: contour-operator
---
apiVersion: v1
kind: Service
metadata:
  labels:
    control-plane: contour-operator
  name: contour-operator-metrics
  namespace: contour-operator
spec:
  ports:
  - name: https
    port: 8443
    targetPort: https
  selector:
    control-plane: contour-operator
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    control-plane: contour-operator
  name: contour-operator
  namespace: contour-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      control-plane: contour-operator
  template:
    metadata:
      labels:
        control-plane: contour-operator
    spec:
      containers:
      - args:
        - --secure-listen-address=0.0.0.0:8443
        - --upstream=http://127.0.0.1:8080/
        - --logtostderr=true
        - --v=10
        image: gcr.io/kubebuilder/kube-rbac-proxy:v0.8.0
        name: kube-rbac-proxy
        ports:
        - containerPort: 8443
          name: https
      - args:
        - --metrics-addr=127.0.0.1:8080
        - --enable-leader-election
        command:
        - /contour-operator
        image: ghcr.io/projectcontour/contour-operator:main
        imagePullPolicy: Always
        name: contour-operator
        resources:
          requests:
            cpu: 100m
            memory: 70Mi
      terminationGracePeriodSeconds: 10
