misc4.0/contour/simple-gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: projectcontour
---
kind: GatewayClass
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: sample-gatewayclass
spec:
  controllerName: projectcontour.io/sample-controller
---
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1alpha2
metadata:
  name: contour
  namespace: projectcontour
spec:
  gatewayClassName: sample-gatewayclass
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
